--- a/auth-center/auth-center-api/pom.xml
+++ b/auth-center/auth-center-api/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>auth-center-api</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
     <description>授权中心公共api</description>
 
 
