--- a/auth-center/auth-center-server/pom.xml
+++ b/auth-center/auth-center-server/pom.xml
@@ -10,10 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>auth-center-server</artifactId>
-    <description>授权中心服务端</description>
     <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <description>授权中心服务端</description>
+
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.yh.hr</groupId>
+            <artifactId>auth-center-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.yh.hr</groupId>
@@ -36,25 +44,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -75,7 +68,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
-
 
     </dependencies>
 
